--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.memoplace">
+    package="com.example.parproject">
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
@@ -8,8 +8,15 @@
          location permissions for the 'MyLocation' functionality.
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
 
     <application
+        android:name=".tool.StartApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -27,11 +34,13 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyA0kj7izgLOhpiUBVQklhyhCRo-nZrm2VY" />
 
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"></activity>
+        <activity android:name=".Memo" />
+        <activity android:name=".UserFeed" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,6 +48,28 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".UserList" />
+        <activity
+            android:name=".CountTime"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity
+            android:name=".SaveActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".DetailActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".EditActivity"
+            android:screenOrientation="portrait"></activity>
+
+        <provider
+            android:name=".database.ActivityProvider"
+            android:authorities="com.example.parproject.database.ActivityProvider"
+            android:exported="true"
+            android:multiprocess="true" />
+
+        <service android:name=".LocationService" />
+
     </application>
 
 </manifest>
